Items its all about items (#23)
* remove Vaadin prerelease repo
    starting with Vaadin 24.9 all prereleases are being pushed into Maven Central
* fix UI issues - and more
* provide take and get commands, secure against empty adventures or no adventures at all
* remove take and drop actions again, if item becomes not containable
* refactor common code sections
* add more tests
* fix Sonar findings, align grid sizes
* reformat code
* refactor layout components for improved sizing and responsiveness